// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList tests on android:  should render an article list item 1`] = `
<View
  accessible={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
>
  <View
    style={
      Object {
        "paddingBottom": 15,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 10,
              "minWidth": "100%",
            }
          }
        >
          <View
            aspectRatio={1.5}
          >
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 0,
              "minWidth": "100%",
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "marginBottom": 5,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "marginBottom": 0,
                  }
                }
              >
                T E S T L A B E L
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              accessible={true}
              allowFontScaling={true}
              aria-level="3"
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "lineHeight": 22,
                  "marginBottom": 5,
                }
              }
            >
              test headline
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "flexWrap": "wrap",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                
                Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab it for Nazi Germany
                ...
              </Text>
            </Text>
            <Text
              accessibilityLabel="datePublication"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                  "marginBottom": 5,
                }
              }
              testID="datePublication"
            >
              Invalid Date, The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ArticleList tests on android:  should render an article list item loading state 1`] = `
<View
  style={
    Object {
      "paddingBottom": 15,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <View
        aspectRatio={1.5}
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "100%",
              }
            }
          />
          <View
            onLayout={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    "#F9F9F9",
                    "#EDEDED",
                  ]
                }
                end={
                  Object {
                    "x": -0.09302964577578221,
                    "y": 0.11488204504197774,
                  }
                }
                locations={
                  Array [
                    0,
                    1,
                  ]
                }
                start={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "height": 24,
            "marginBottom": 10,
            "maxWidth": 300,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": 10,
            "marginBottom": 0,
            "maxWidth": 240,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ArticleList tests on android:  should render an article list item without images 1`] = `
<View
  accessible={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
>
  <View
    style={
      Object {
        "paddingBottom": 15,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 0,
              "minWidth": "100%",
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "marginBottom": 5,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "marginBottom": 0,
                  }
                }
              >
                T E S T L A B E L
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              accessible={true}
              allowFontScaling={true}
              aria-level="3"
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "lineHeight": 22,
                  "marginBottom": 5,
                }
              }
            >
              test headline
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "flexWrap": "wrap",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                
                Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab
                ...
              </Text>
            </Text>
            <Text
              accessibilityLabel="datePublication"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                  "marginBottom": 5,
                }
              }
              testID="datePublication"
            >
              Invalid Date, The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ArticleList tests on android:  should render an article list page error correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 15,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "alignSelf": "center",
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 35,
        "marginBottom": 10,
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
    Something's gone wrong
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 18,
        "textAlign": "center",
      }
    }
  >
    We can't load the page you have requested. Please check your network connection and retry to continue
  </Text>
  <View
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Retry"
      accessible={true}
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#006699",
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFF",
              "fontFamily": "GillSansMTStd-Medium",
            }
          }
        >
          RETRY
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ArticleList tests on android:  should render the article list item separator keyline correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
    }
  }
/>
`;

exports[`ArticleList tests on android:  should render the article list page error correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "marginBottom": 20,
        "marginTop": 20,
        "width": "60%",
      }
    }
  >
    <TimesImage
      aspectRatio={0.9090909090909091}
      uri="https://www.thetimes.co.uk/d/img/internal-error-c45d0e8347.png"
    />
  </View>
  <ArticleListError
    refetch={[Function]}
  />
</View>
`;

exports[`ArticleList tests on android:  should render the article list pagination correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "maxWidth": 800,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "center",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "paddingTop": 4,
            }
          }
          testID="results-message"
        >
          Showing 1 - 10 of 20 results
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "space-between",
          }
        }
      >
        <View />
        <View>
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <View
              style={
                Object {
                  "alignItems": "baseline",
                  "flexDirection": "row",
                  "padding": 12,
                }
              }
              testID="pagination-button-next"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                    "height": 15,
                    "marginRight": 10,
                    "textAlign": "right",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Next
                </Text>
              </Text>
              <svg
                height={12}
                width={7}
              >
                <g
                  fill="#006699"
                >
                  <path />
                </g>
              </svg>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
